--- a/.github/workflows/compile-after-patch.yml
+++ b/.github/workflows/compile-after-patch.yml
@@ -11,8 +11,8 @@ jobs:
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
-      with:
-        ref: 2b1abab826bbfb20b2f86cbf7f15c98b13439299
+      # with:
+      #   ref: 2b1abab826bbfb20b2f86cbf7f15c98b13439299
     - name: Install dependencies
       run: |
         sudo apt-get install wget build-essential cmake curl file g++-multilib gcc-multilib git libunwind-dev libcap-dev libgoogle-perftools-dev libncurses5-dev libsqlite3-dev libtcmalloc-minimal4 python3-pip unzip graphviz doxygen
@@ -22,7 +22,7 @@ jobs:
     - name: Install llvm 3
       run: |
         wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key|sudo apt-key add -      
-        sudo apt-get install clang-13 llvm-13 llvm-13-dev llvm-13-tools 
+        sudo apt-get install clang-13 llvm-13 llvm-13-dev llvm-13-tools
     - name: Install deps for STP
       run: | 
         sudo apt-get update
